# deadspace-vita

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get_dump.sh
.github/: FUNDING.yml
companion/: main.cpp
lib/fios/: fios.c  fios.h
lib/kubridge/: CMakeLists.txt  exceptions_user.h  exports.yml  kubridge.h  main.c  stubs.yml
lib/kubridge/src/: exceptions.S  exceptions.c  exceptions_user.S  internal.h  main.c  mprotect.c  rwx_patch.S
lib/kubridge/src/sysmem/: memblock.h  sce_as.h  sysmem_types.h
lib/libc_bridge/: libc_bridge.h  nids.yml
lib/so_util/: elf.h  so_util.c  so_util.h
lib/vfpvector/: vfp_f32_emu.c  vfp_f64_emu.c  vfp_gen.c  vfp_vector.c  vfp_vector.h
livearea/: template.xml
loader/: EAAudioCore.c  EAAudioCore.h  config.h  default_dynlib.c  default_dynlib.h  glutil.c  glutil.h  java.io.InputStream.c  jni.c  jni.h  jni_fake.c  jni_fake.h  jni_specific.h  main.c  main.h  patch.c  patch.h  patch_game.c  patch_game.h  vector_op_emulation.c
loader/android/: EAAudioCore.c  java.io.InputStream.h  jni.h
loader/reimpl/: _existing_files.c  _preload_files.c  controls.c  controls.h  ctype_patch.c  env.c  env.h  io.c  io.h  log.c  log.h  mem.c  mem.h  pthr.c  pthr.h  sys.c  sys.h
loader/utils/: dialog.c  dialog.h  glutil.c  glutil.h  loading_screen.c  loading_screen.h  settings.c  settings.h  sfp2hfp.h  utils.c  utils.h
